--- a/Podcasts.html
+++ b/Podcasts.html
@@ -282,7 +282,7 @@ body
 </div></center>
 
 <center><div id="font" class="header">
-<a href="">The podcasts we have done so far</a>
+<a href="">click on the podcast you want to listen to</a>
 </div></center>
 
 
