--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ body
 
 
 <center><div id="font" class="side">
-<a href="">The Boyz Podcast</a>
+<a href="podcast.html">The Boyz Podcast</a>
 
 
 <script>
