--- a/mContacts.html
+++ b/mContacts.html
@@ -76,7 +76,7 @@ body {
 
 <font size="7"><h2><center>People who work on it</center></h2></font>
 <p></p>
-
+<iframe src="https://discordapp.com/widget?id=292764943982264321&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>
 <script>
 function openNav() {
     document.getElementById("mySidenav").style.width = "250px";
